# ssl_context_builder

./: README.md  setup.cfg
6.3.0/: .gitignore  rename.ps1
6.3.0/angular/: BhResturant.AngularUI.sln  README.md  angular.json  package-lock.json  package.json
6.3.0/angular/Properties/: launchSettings.json
6.3.0/angular/e2e/: app.e2e-spec.ts  app.po.ts
6.3.0/angular/src/: index.html
6.3.0/angular/src/app/: app-routing.module.ts  app.module.ts
6.3.0/angular/src/shared/: AppConsts.ts
6.3.0/aspnet-core/: BhResturant.sln
6.3.0/aspnet-core/src/BhResturant.Application/: AppConsts.cs  BhResturant.Application.csproj  BhResturantAppServiceBase.cs  BhResturantApplicationModule.cs
6.3.0/aspnet-core/src/BhResturant.Core/: AppVersionHelper.cs  BhResturant.Core.csproj  BhResturantConsts.cs  BhResturantCoreModule.cs
6.3.0/aspnet-core/src/BhResturant.EntityFrameworkCore/: BhResturant.EntityFrameworkCore.csproj
6.3.0/aspnet-core/src/BhResturant.Migrator/: BhResturant.Migrator.csproj  (+5 more)
ssl_context_builder/: README.md  __init__.py  setup.cfg
ssl_context_builder/Tests/: dry_run_examples.py  test_invalid_sites.py  test_valid_sites.py
ssl_context_builder/builder/: builder.py  constants.py  decorators.py
ssl_context_builder/http_impl/requests_wrapper/: secure_session.py  ssl_adapter.py
ssl_context_builder/ssl_context_builder/: builder.py  constants.py  decorators.py  ssl_context_builder.py
ssl_context_builder/ssl_context_builder/http_impl/: requests_lib.py
ssl_context_builder/ssl_context_builder/http_impl/requests_wrapper/: secure_session.py  ssl_adapter.py
(+198 files in other folders)
