[metadata]
name = ssl_context_builder
version = attr: ssl_context_builder.__version__
description = Test
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2
license_files = LICENSE
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
[options]
python_requires = >=3.10.1
packages = find:
zip_safe = True
include_package_data = False

[pep8]
max-line-length=79

[easy_install]
zip_ok = True
